overlays/monitoring/promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: monitoring
spec:
  selector:
    matchLabels:
      name: promtail
  template:
    metadata:
      labels:
        name: promtail
    spec:
      serviceAccountName: promtail
      tolerations:
        - operator: Exists
          effect: NoSchedule
      containers:
        - name: promtail
          image: grafana/promtail:3.0.0
          args:
            - "-config.file=/etc/promtail/promtail.yaml"
          securityContext:
            runAsUser: 0
            runAsGroup: 0
          volumeMounts:
            - name: logs
              mountPath: /var/log
              readOnly: true
            - name: config
              mountPath: /etc/promtail
            - name: run
              mountPath: /run/promtail
      volumes:
        - name: logs
          hostPath:
            path: /var/log
        - name: config
          configMap:
            name: promtail-config
        - name: run
          hostPath:
            path: /run/promtail
